<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sapl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l2"
            android:textSize="35sp"></TextView>

        <TextView
            android:id="@+id/text_view_sapl21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_1"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_2"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_3"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_4"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_5"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_6"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_7"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_2_8"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
         android:id="@+id/text_view_sapl29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sap_l_2_9"
        android:textColor="#ff0000"
        android:background="@android:color/darker_gray"
        android:textSize="20sp"></TextView>
    <TextView
        android:id="@+id/text_view_sapl210"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sap_l_2_10"
        android:textColor="#ff0000"
        android:textSize="20sp"></TextView>
</LinearLayout>
    </android.support.constraint.ConstraintLayout>