<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sapl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l1"
            android:textSize="35sp"></TextView>

        <TextView
            android:id="@+id/text_view_sapl11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_1"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_2"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_3"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_4"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_5"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_6"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_1_7"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>