<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sapl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l4"
            android:textSize="35sp"></TextView>

        <TextView
            android:id="@+id/text_view_sapl41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_4_1"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_4_2"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_4_3"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_4_4"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_sapl45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sap_l_4_5"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>