<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/osl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l1"
            android:textSize="35sp"></TextView>

        <TextView
            android:id="@+id/text_view_osl11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_l_1_1"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_osl12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_l_1_2"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_osl13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_l_1_3"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>