<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/netl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l3"
            android:textSize="35sp"></TextView>

        <TextView
            android:id="@+id/text_view_netl31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_l_3_1"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/text_view_netl32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_l_3_2"
            android:textColor="#ff0000"
            android:textSize="20sp"></TextView>
        <TextView
            android:id="@+id/text_view_netl33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_l_3_3"
            android:textColor="#ff0000"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"></TextView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>