<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/osl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l4"
            android:textSize="35sp"></TextView>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_osl41"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#932f28" />

                    <TextView
                        android:id="@+id/text_view_osl41"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/darker_gray"
                        android:text="@string/os_l_4_1"
                        android:textColor="#ff0000"
                        android:textSize="20sp"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_osl42"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#932f28" />

                    <TextView
                        android:id="@+id/text_view_osl42"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/os_l_4_2"
                        android:textColor="#ff0000"
                        android:textSize="20sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_osl43"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#932f28" />

                    <TextView
                        android:id="@+id/text_view_osl43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/darker_gray"
                        android:text="@string/os_l_4_3"
                        android:textColor="#ff0000"
                        android:textSize="20sp"></TextView>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>